--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "replicate": "^0.25.2",
-    "@anthropic-ai/sdk": "^0.30.0",
-    "eruda": "^3.0.1"
+    "@anthropic-ai/sdk": "^0.30.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
